@@ -1,3 +1,6 @@
+[B]Version 0.2.0 - 12.01.2014[/B]
+    * feature: added support for download tool "pyLoad"
+
 [B]Version 0.1.3 - 20.12.2013[/B]
     * bug - XBMC 12.2 FRODO: fixed broken dependence
     * bug: fixed scraping problems
